<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.microbean</groupId>
  <artifactId>microbean-settings-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <parent>
    <groupId>org.microbean</groupId>
    <artifactId>microbean-pluginmanagement-pom</artifactId>
    <version>17</version>
    <relativePath />
  </parent>

  <name>microBean™ Settings: Parent</name>
  <description>Settings for Java.</description>
  <inceptionYear>2019</inceptionYear>
  <url>https://microbean.github.io/${project.artifactId}</url>

  <scm>
    <connection>scm:git:git@github.com:microbean/${project.artifactId}.git</connection>
    <developerConnection>scm:git:git@github.com:microbean/${project.artifactId}.git</developerConnection>
    <url>https://github.com/microbean/${project.artifactId}/</url>
    <tag>HEAD</tag>
  </scm>

  <modules>
    <module>microbean-settings-api</module>
    <module>microbean-settings-proxy-api</module>
  </modules>
  
  <dependencyManagement>
    <dependencies>

      <!-- Imports. -->

      <dependency>
        <groupId>org.jboss.weld</groupId>
        <artifactId>weld-core-bom</artifactId>
        <version>4.0.1.Final</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Normal dependencies. -->

      <!-- See also org.jboss.jandex:jandex-maven-plugin below -->
      <dependency>
        <groupId>org.jboss</groupId>
        <artifactId>jandex</artifactId>
        <version>2.4.0.Final</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.7.2</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.7.2</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>org.microbean</groupId>
        <artifactId>microbean-development-annotations</artifactId>
        <version>0.2.11</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>org.microbean</groupId>
        <artifactId>microbean-type</artifactId>
        <version>0.0.14</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>microbean-settings-api</artifactId>
        <version>${project.version}</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>microbean-settings-proxy-api</artifactId>
        <version>${project.version}</version>
        <type>jar</type>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <compilerArgs>
              <arg>--enable-preview</arg>
              <arg>-Xlint:all</arg>
              <arg>-Xlint:-preview</arg>
              <arg>-Xpkginfo:always</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <configuration>
            <argLine>--enable-preview</argLine>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <additionalOptions>
              <additionalOption>--enable-preview</additionalOption>
            </additionalOptions>
            <docfilessubdirs>true</docfilessubdirs>
            <taglet>guru.nidi.graphviz.GraphvizTaglet</taglet>
            <tagletArtifact>
              <groupId>guru.nidi</groupId>
              <artifactId>graphviz-taglet9</artifactId>
              <version>0.18.0</version>
            </tagletArtifact>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M5</version>
          <configuration>
            <argLine>--enable-preview</argLine>
            <systemPropertyVariables>
              <project.build.directory>${project.build.directory}</project.build.directory>
              <project.build.outputDirectory>${project.build.outputDirectory}</project.build.outputDirectory>
              <project.build.testDirectory>${project.build.testDirectory}</project.build.testDirectory>
              <project.build.testOutputDirectory>${project.build.testOutputDirectory}</project.build.testOutputDirectory>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jboss.jandex</groupId>
          <artifactId>jandex-maven-plugin</artifactId>
          <version>1.2.0</version>
          <configuration>
            <indexName>${jandex.indexName}</indexName>
            <processDefaultFileSet>false</processDefaultFileSet>
            <verbose>${jandex.verbose}</verbose>
          </configuration>
          <dependencies>
            <!-- See also org.jboss:jandex above. -->
            <dependency>
              <groupId>org.jboss</groupId>
              <artifactId>jandex</artifactId>
              <version>2.4.0.Final</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <id>Create Jandex index</id>
              <phase>process-classes</phase>
              <configuration>
                <fileSets>
                  <fileSet>
                    <directory>${project.build.outputDirectory}</directory>
                  </fileSet>
                </fileSets>
              </configuration>
            </execution>
            <execution>
              <id>Create Jandex index for test classes</id>
              <phase>process-test-classes</phase>
              <configuration>
                <fileSets>
                  <fileSet>
                    <directory>${project.build.testOutputDirectory}</directory>
                  </fileSet>
                </fileSets>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.github.github</groupId>
        <artifactId>site-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.jboss.jandex</groupId>
        <artifactId>jandex-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>Create Jandex index</id>
            <goals>
              <goal>jandex</goal>
            </goals>
          </execution>
          <execution>
            <id>Create Jandex index for test classes</id>
            <goals>
              <goal>jandex</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <properties>

    <jandex.indexName>jandex.idx</jandex.indexName>
    <jandex.verbose>true</jandex.verbose>

    <jdkToolchainVendor>openjdk</jdkToolchainVendor>

    <!-- maven-compiler-plugin properties -->
    <maven.compiler.release>17</maven.compiler.release>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <!-- maven-javadoc-plugin properties -->
    <links></links>

  </properties>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <report>javadoc-no-fork</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

</project>
